# DataLens

./: README.md  pyproject.toml
data_generator/: synthetic_data.py
data_generator/data/: ecommerce_sales_data_2.csv  ecommerce_sales_data_3.csv
datalens/: app.py  pyproject.toml  requirements.txt
